--- a/first/templates/registration/login.html
+++ b/first/templates/registration/login.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Авторизация</title>
-    </head>
-    <body>
-        <h1>Авторизация</h1>
-        <form method="post" action="/login/">
-            {% csrf_token%}
-            <input type="submit" value="Войти">
-        </form>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Авторизация</title>
+</head>
+<body>
+    <h1>Авторизация</h1>
+    <form method="post" action="/login/">
+        {% csrf_token%}
+        {{ form.as_p }}
+        <input type="submit" value="Войти">
+    </form>
+</body>
 </html>
