--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -1,152 +1,34 @@
-<!DOCTYPE html>
-<html lang="en" class="h-100">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calc page</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
+{% extends 'base.html' %}
+{% block content %}
+    <div class="container">
+        <center><div class="row mt-5">
+            <div class="col">
+                <div class="card border-danger">
+                    <div class="card-header border-danger bg-danger" style="color: rgba(180, 30, 30, 1)">
+                        <b class="text-white">Вход в аккаунт</b>
+                    </div>
+                    <div class="card-body">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
-    <meta name="theme-color" content="#712cf9">
+                        <div class="mb-3 row">
+                            <center><div class="col-sm-8">
+                                <a class="btn btn-outline-danger w-25" href="#">Зарегестрироваться</a>
+                            </div></center>
+                        </div>
+                        <div class="mb-3 row">
+                            <center><div class="col-sm-8">
+                                <a class="btn btn-outline-danger w-25" href="{% url 'login' %}">Войти</a>
+                            </div></center>
+                        </div>
+                        <div class="mb-3 row">
+                            <center><div class="col-sm-8">
+                                <a class="btn btn-outline-danger w-25" href="#">Войти как гость</a>
+                            </div></center>
+                        </div>
 
-    <style>
-          .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-          }
-
-          @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-              font-size: 3.5rem;
-            }
-          }
-
-          .b-example-divider {
-            height: 3rem;
-            background-color: rgba(0, 0, 0, .1);
-            border: solid rgba(0, 0, 0, .15);
-            border-width: 1px 0;
-            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-          }
-
-          .b-example-vr {
-            flex-shrink: 0;
-            width: 1.5rem;
-            height: 100vh;
-          }
-
-          .bi {
-            vertical-align: -.125em;
-            fill: currentColor;
-          }
-
-          .nav-scroller {
-            position: relative;
-            z-index: 2;
-            height: 2.75rem;
-            overflow-y: hidden;
-          }
-
-          .nav-scroller .nav {
-            display: flex;
-            flex-wrap: nowrap;
-            padding-bottom: 1rem;
-            margin-top: -1px;
-            overflow-x: auto;
-            text-align: center;
-            white-space: nowrap;
-            -webkit-overflow-scrolling: touch;
-          }
-
-
-    </style>
-
-    <link href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/sticky-footer-navbar.css"
-          rel="stylesheet">
-
-</head>
-<body class="d-flex flex-column h-100">
-<header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Маршруты по ВДНХ</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Создание маршрута</a>
-                    </li>
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">История маршрутов</a>
-                        </li>
-                    {% endif %}
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/logout/"><em>Выйти</em></a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/"><em>Войти</em></a>
-                        </li>
-                    {% endif %}
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
-</header>
-<main class="flex-shrink-0">
-<!--    <center><table>-->
-<!--            <tr>-->
-<!--                <td>-->
-<!--                    <center><form method="get" action="/reg/">-->
-<!--                        {% csrf_token %}-->
-<!--                        <input type="submit" value="Зарегестрироваться">-->
-<!--                    </form></center>-->
-<!--                </td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <td>-->
-<!--                    <center><form method="get" action="/login/">-->
-<!--                        {% csrf_token %}-->
-<!--                        <input type="submit" value="Войти">-->
-<!--                    </form></center>-->
-<!--                </td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--                <td>-->
-<!--                    <center><form method="get" action="/reg/">-->
-<!--                        {% csrf_token %}-->
-<!--                        <input type="submit" value="Войти как гость">-->
-<!--                    </form></center>-->
-<!--                </td>-->
-<!--            </tr>-->
-<!--        </table></center>-->
-    <br><br><br>
-    <center><table>
-        <tr>
-            <td><a class="nav-link" href="#">Зарегестрироваться</a></td>
-        </tr>
-        <tr>
-            <td><a class="nav-link" href="/login/">Войти</a></td>
-        </tr>
-        <tr>
-            <td><a class="nav-link" href="#">Войти как гость</a></td>
-        </tr>
-    </table></center>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+        </center>
+    </div>
+{% endblock %}
