--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -4,24 +4,24 @@
         <center><div class="row mt-5">
             <div class="col">
                 <div class="card border-danger">
-                    <div class="card-header border-danger bg-danger" style="color: rgba(180, 30, 30, 1)">
-                        <b class="text-white">Вход в аккаунт</b>
+                    <div class="card-header border-danger-subtle bg-danger-subtle">
+                        <b class="text-danger-emphasis">Вход в аккаунт</b>
                     </div>
                     <div class="card-body">
 
                         <div class="mb-3 row">
                             <center><div class="col-sm-8">
-                                <a class="btn btn-outline-danger w-25" href="#">Зарегестрироваться</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="#">Зарегестрироваться</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
                             <center><div class="col-sm-8">
-                                <a class="btn btn-outline-danger w-25" href="{% url 'login' %}">Войти</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'login' %}">Войти</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
                             <center><div class="col-sm-8">
-                                <a class="btn btn-outline-danger w-25" href="#">Войти как гость</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="#">Войти как гость</a>
                             </div></center>
                         </div>
 
