--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -28,11 +28,6 @@
             }
           }
 
-<!--          .text-primary {-->
-<!--              &#45;&#45;bs-text-opacity: 1;-->
-<!--              color: rgba(var(&#45;&#45;bs-primary-rgb), var(&#45;&#45;bs-text-opacity)) !important;-->
-<!--            }-->
-
           .b-example-divider {
             height: 3rem;
             background-color: rgba(0, 0, 0, .1);
@@ -79,9 +74,9 @@
 
 <header>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md fixed-top bg-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'index' %}">Маршруты по ВДНХ</a>
+            <a class="navbar-brand  text-light" href="{% url 'index' %}">Маршруты по ВДНХ</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -89,23 +84,23 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Создание маршрута</a>
+                        <a class="nav-link active text-light" href="#">Создание маршрута</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'info' %}">Информация о павильйонах</a>
+                        <a class="nav-link active text-light" href="{% url 'info' %}">Информация о павильонах</a>
                     </li>
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">История маршрутов</a>
+                            <a class="nav-link active text-light" href="#">История маршрутов</a>
                         </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link active" href="/logout/"><em>Выйти</em></a>
+                            <a class="nav-link active text-light" href="/logout/"><em>Выйти</em></a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link active" href="{% url 'index' %}"><em>Войти</em></a>
+                            <a class="nav-link active text-light" href="{% url 'index' %}"><em>Войти</em></a>
                         </li>
                     {% endif %}
                 </ul>
@@ -118,6 +113,12 @@
     {% block content %}
     {% endblock %}
 </main>
+
+<footer class="footer mt-auto py-3 bg-secondary-subtle">
+  <div class="container" align="right">
+    <span class="text-muted">&copy; Team •••• {% now "Y" %}</span>
+  </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
