--- a/first/templates/info.html
+++ b/first/templates/info.html
@@ -4,13 +4,13 @@
         <center><div class="row mt-5">
             <div class="col">
                 <div class="card border-danger">
-                    <div class="card-header border-danger bg-danger">
-                        <b class="text-white">Вход в аккаунт</b>
+                    <div class="card-header bg-danger-subtle border-danger-subtle">
+                        <b class="text-danger-emphasis">Вход в аккаунт</b>
                     </div>
                     <div class="card-body">
                         <div class="mb-1 row">
                             <center><div class="col-sm-8">
-                                <a class="btn btn-outline-danger" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA_%D0%BF%D0%B0%D0%B2%D0%B8%D0%BB%D1%8C%D0%BE%D0%BD%D0%BE%D0%B2_%D0%B8_%D1%81%D0%BE%D0%BE%D1%80%D1%83%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9_%D0%BD%D0%B0_%D0%92%D0%94%D0%9D%D0%A5">Информация о павильонах</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA_%D0%BF%D0%B0%D0%B2%D0%B8%D0%BB%D1%8C%D0%BE%D0%BD%D0%BE%D0%B2_%D0%B8_%D1%81%D0%BE%D0%BE%D1%80%D1%83%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9_%D0%BD%D0%B0_%D0%92%D0%94%D0%9D%D0%A5">Информация о павильонах</a>
                             </div></center>
                         </div>
                     </div>
