--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -84,7 +84,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" href="#">Создание маршрута</a>
+                        <a class="nav-link active text-light" href="{% url 'route' %}">Создание маршрута</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-light" href="{% url 'info' %}">Информация о павильонах</a>
@@ -96,7 +96,7 @@
                     {% endif %}
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link active text-light" href="/logout/"><em>Выйти</em></a>
+                            <a class="nav-link active text-light" href="{% url 'logout' %}"><em>Выйти</em></a>
                         </li>
                     {% else %}
                         <li class="nav-item">
