--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -9,9 +9,9 @@
                     </div>
                     <div class="card-body">
 
-                        <div class="mb-3 row">
+                        <div class="mb-3 row mt-3">
                             <center><div class="col-sm-8">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="#">Зарегестрироваться</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'signup' %}">Зарегестрироваться</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
@@ -19,12 +19,6 @@
                                 <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'login' %}">Войти</a>
                             </div></center>
                         </div>
-                        <div class="mb-3 row">
-                            <center><div class="col-sm-8">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="#">Войти как гость</a>
-                            </div></center>
-                        </div>
-
                     </div>
                 </div>
             </div>
