--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -77,9 +77,9 @@
     <nav class="navbar navbar-expand-md fixed-top bg-secondary">
         <div class="container-fluid">
             <a class="navbar-brand  text-light" href="{% url 'index' %}">Маршруты по ВДНХ</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            <button class="navbar-toggler bg-danger-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon text-light"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
