--- a/first/templates/info.html
+++ b/first/templates/info.html
@@ -5,7 +5,7 @@
             <div class="col">
                 <div class="card border-danger">
                     <div class="card-header bg-danger-subtle border-danger-subtle">
-                        <b class="text-danger-emphasis">Вход в аккаунт</b>
+                        <b class="text-danger-emphasis">Информация</b>
                     </div>
                     <div class="card-body">
                         <div class="mb-1 row">
