--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -10,12 +10,12 @@
                     <div class="card-body">
 
                         <div class="mb-3 row mt-3">
-                            <center><div class="col-sm-8">
+                            <center><div class="col">
                                 <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'signup' %}">Зарегестрироваться</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
-                            <center><div class="col-sm-8">
+                            <center><div class="col">
                                 <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'login' %}">Войти</a>
                             </div></center>
                         </div>
