--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -11,12 +11,12 @@
 
                         <div class="mb-3 row mt-3">
                             <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'signup' %}">Зарегестрироваться</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'signup' %}">Зарегестрироваться</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
                             <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25" href="{% url 'login' %}">Войти</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'login' %}">Войти</a>
                             </div></center>
                         </div>
                     </div>
