--- a/first/templates/info.html
+++ b/first/templates/info.html
@@ -1,22 +1,62 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
-        <center><div class="row mt-5">
+<div class="container">
+    <center>
+        <div class="row mt-5">
             <div class="col">
                 <div class="card border-danger">
                     <div class="card-header bg-danger-subtle border-danger-subtle">
                         <b class="text-danger-emphasis">Информация</b>
                     </div>
                     <div class="card-body">
-                        <div class="mb-1 row">
-                            <center><div class="col-sm-8">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA_%D0%BF%D0%B0%D0%B2%D0%B8%D0%BB%D1%8C%D0%BE%D0%BD%D0%BE%D0%B2_%D0%B8_%D1%81%D0%BE%D0%BE%D1%80%D1%83%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9_%D0%BD%D0%B0_%D0%92%D0%94%D0%9D%D0%A5">Информация о павильонах</a>
-                            </div></center>
+                        <div class="row-4">
+                            <center>
+                                <div class="col">
+                                    <p align="left">1 Павильон № 1 «Центральный»<br>
+                                        2 Павильон № 2 «Народное образование» («Грузия»)<br>
+                                        3 Павильон № 5 «Физика»<br>
+                                        4 Павильон № 10 «Стандарты»<br>
+                                        5 Павильон № 11 «Металлургия» («Казахстан»)<br>
+                                        6 Павильон № 12 «Профсоюзы»<br>
+                                        7 Павильон № 13 «Здоровье»<br>
+                                        8 Павильон № 14 «Вычислительная техника»<br>
+                                        9 Павильон № 15 «Радиоэлектроника и связь»<br>
+                                        10 Фонтан «Дружба народов СССР»<br>
+                                        11 Павильон № 71 «Атомная энергия»<br>
+                                        12 Павильон № 68 «Армения»<br>
+                                        13 Павильон № 67 «Советская печать»<br>
+                                        14 Павильон № 66 «Культура»<br>
+                                        15 Павильон № 64 «Оптика»<br>
+                                        16 Офисы (бывш. ресторан «Подкова»)<br>
+                                        17 Фонтан «Каменный цветок»<br>
+                                        18 Павильон № 17 «Лесная промышленность»<br>
+                                        19 Павильон №19 Планируемая область застройки<br>
+                                        20 Павильон № 18 «Белоруссия»<br>
+                                        21 Павильон № 58 «Земледелие» («Украина»)<br>
+                                        22 Павильон № 57<br>
+                                        23 Павильон № 62 «Охрана природы»<br>
+                                        24 Павильон №61 «Центросоюз»<br>
+                                        25 Павильон № 20 «Химическая промышленность»<br>
+                                        26 Павильон № 21 «Газовая промышленность»<br>
+                                        27 Павильон № 25 «Нефтяная промышленность»<br>
+                                        28 Строящийся аквапарк с океанариумом<br>
+                                        30 Площадь Промышленности<br>
+                                        31 Павильон № 26 «Транспорт»<br>
+                                        32 Павильон № 32 «Космос»<br>
+                                        33 Павильон № 55 «Электрификация»<br>
+                                        34 Павильон № 29 «Цветоводство и озеленение»<br>
+                                        35 Павильон № 52-53 «Механизация»<br>
+                                        36 Недействующий ресторан «Золотой Колос»<br>
+                                        37 Павильон № 36 «Переработка продукции сельского хозяйства»<br>
+                                        38 Павильон № 38 Выставочно-аквариальный комплекс<br>
+                                        39 Частный особняк Якубова Якума Мелик Садых-оглы</p>
+                                </div>
+                            </center>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        </center>
-    </div>
+    </center>
+</div>
 {% endblock %}
