--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -14,6 +14,9 @@
     <meta name="theme-color" content="#712cf9">
 
     <style>
+          body{
+            background-image: url(https://sun9-52.userapi.com/impg/roRbczAi68jDa1jq5wGbjr8Z4qbuM1VZescXFw/c0njeWwcX0Q.jpg?size=2560x1440&quality=96&sign=c15e05d92faa3e028b5a977d71b5a556&type=album)
+          }
           .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
