--- a/first/templates/info.html
+++ b/first/templates/info.html
@@ -12,44 +12,46 @@
                         <div class="row-4">
                             <center>
                                 <div class="col">
-                                    <p align="left">1 Павильон № 1 «Центральный»<br>
-                                        2 Павильон № 2 «Народное образование» («Грузия»)<br>
-                                        3 Павильон № 5 «Физика»<br>
-                                        4 Павильон № 10 «Стандарты»<br>
-                                        5 Павильон № 11 «Металлургия» («Казахстан»)<br>
-                                        6 Павильон № 12 «Профсоюзы»<br>
-                                        7 Павильон № 13 «Здоровье»<br>
-                                        8 Павильон № 14 «Вычислительная техника»<br>
-                                        9 Павильон № 15 «Радиоэлектроника и связь»<br>
-                                        10 Фонтан «Дружба народов СССР»<br>
-                                        11 Павильон № 71 «Атомная энергия»<br>
-                                        12 Павильон № 68 «Армения»<br>
-                                        13 Павильон № 67 «Советская печать»<br>
-                                        14 Павильон № 66 «Культура»<br>
-                                        15 Павильон № 64 «Оптика»<br>
-                                        16 Офисы (бывш. ресторан «Подкова»)<br>
-                                        17 Фонтан «Каменный цветок»<br>
-                                        18 Павильон № 17 «Лесная промышленность»<br>
-                                        19 Павильон №19 Планируемая область застройки<br>
-                                        20 Павильон № 18 «Белоруссия»<br>
-                                        21 Павильон № 58 «Земледелие» («Украина»)<br>
-                                        22 Павильон № 57<br>
-                                        23 Павильон № 62 «Охрана природы»<br>
-                                        24 Павильон №61 «Центросоюз»<br>
-                                        25 Павильон № 20 «Химическая промышленность»<br>
-                                        26 Павильон № 21 «Газовая промышленность»<br>
-                                        27 Павильон № 25 «Нефтяная промышленность»<br>
-                                        28 Строящийся аквапарк с океанариумом<br>
-                                        30 Площадь Промышленности<br>
-                                        31 Павильон № 26 «Транспорт»<br>
-                                        32 Павильон № 32 «Космос»<br>
-                                        33 Павильон № 55 «Электрификация»<br>
-                                        34 Павильон № 29 «Цветоводство и озеленение»<br>
-                                        35 Павильон № 52-53 «Механизация»<br>
-                                        36 Недействующий ресторан «Золотой Колос»<br>
-                                        37 Павильон № 36 «Переработка продукции сельского хозяйства»<br>
-                                        38 Павильон № 38 Выставочно-аквариальный комплекс<br>
-                                        39 Частный особняк Якубова Якума Мелик Садых-оглы</p>
+                                    <table class="table table-striped">
+                                        <tr><td>1 Павильон № 1 «Центральный»</td></tr>
+                                        <tr><td>2 Павильон № 2 «Народное образование» («Грузия»)</td></tr>
+                                        <tr><td>3 Павильон № 5 «Физика»</td></tr>
+                                        <tr><td>4 Павильон № 10 «Стандарты»</td></tr>
+                                        <tr><td>5 Павильон № 11 «Металлургия» («Казахстан»)</td></tr>
+                                        <tr><td>6 Павильон № 12 «Профсоюзы»</td></tr>
+                                        <tr><td>7 Павильон № 13 «Здоровье»</td></tr>
+                                        <tr><td>8 Павильон № 14 «Вычислительная техника»</td></tr>
+                                        <tr><td>9 Павильон № 15 «Радиоэлектроника и связь»</td></tr>
+                                        <tr><td>10 Фонтан «Дружба народов СССР»</td></tr>
+                                        <tr><td>11 Павильон № 71 «Атомная энергия»</td></tr>
+                                        <tr><td>12 Павильон № 68 «Армения»</td></tr>
+                                        <tr><td>13 Павильон № 67 «Советская печать»</td></tr>
+                                        <tr><td>14 Павильон № 66 «Культура»</td></tr>
+                                        <tr><td>15 Павильон № 64 «Оптика»</td></tr>
+                                        <tr><td>16 Офисы (бывш. ресторан «Подкова»)</td></tr>
+                                        <tr><td>17 Фонтан «Каменный цветок»</td></tr>
+                                        <tr><td>18 Павильон № 17 «Лесная промышленность»</td></tr>
+                                        <tr><td>19 Павильон №19 Планируемая область застройки</td></tr>
+                                        <tr><td>20 Павильон № 18 «Белоруссия»</td></tr>
+                                        <tr><td>21 Павильон № 58 «Земледелие» («Украина»)</td></tr>
+                                        <tr><td>22 Павильон № 57 "Россия - моя история"</td></tr>
+                                        <tr><td>23 Павильон № 62 «Охрана природы»</td></tr>
+                                        <tr><td>24 Павильон №61 «Центросоюз»</td></tr>
+                                        <tr><td>25 Павильон № 20 «Химическая промышленность»</td></tr>
+                                        <tr><td>26 Павильон № 21 «Выставка-реконструкция «Терракотовая армия»</td></tr>
+                                        <tr><td>27 Павильон № 25 «Нефтяная промышленность»</td></tr>
+                                        <tr><td>28 Строящийся аквапарк с океанариумом</td></tr>
+                                        <tr><td>30 Площадь Промышленности</td></tr>
+                                        <tr><td>31 Павильон № 26 «Транспорт»</td></tr>
+                                        <tr><td>32 Павильон № 32 «Космос»</td></tr>
+                                        <tr><td>33 Павильон № 55 «Электрификация»</td></tr>
+                                        <tr><td>34 Павильон № 29 «Цветоводство и озеленение»</td></tr>
+                                        <tr><td>35 Павильон № 52-53 «Механизация»</td></tr>
+                                        <tr><td>36 Недействующий ресторан «Золотой Колос»</td></tr>
+                                        <tr><td>37 Павильон № 36 «Переработка продукции сельского хозяйства»</td></tr>
+                                        <tr><td>38 Павильон № 38 Выставочно-аквариальный комплекс</td></tr>
+                                        <tr><td>39 Частный особняк Якубова Якума Мелик Садых-оглы</td></tr>
+                                    </table>
                                 </div>
                             </center>
                         </div>
