--- a/first/templates/signup.html
+++ b/first/templates/signup.html
@@ -5,14 +5,14 @@
             <div class="col">
                 <div class="card border-danger">
                     <div class="card-header bg-danger-subtle border-danger-subtle">
-                        <b class="text-danger-emphasis">Авторизация</b>
+                        <b class="text-danger-emphasis">Регистрация</b>
                     </div>
                     <div class="card-body">
                         <center>
                             <form method="post">
                               {% csrf_token %}
                               {{ form.as_p }}
-                              <button type="submit" class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle w-25">Зарегистрироваться</button>
+                              <button type="submit" class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle">Зарегистрироваться</button>
                             </form>
                         </center>
                     </div>
