--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -79,7 +79,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md fixed-top bg-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand  text-light" href="{% url 'index' %}">Маршруты по ВДНХ</a>
+            <a class="navbar-brand  text-light" href="{% url 'route_menu' %}">Маршруты по ВДНХ</a>
             <button class="navbar-toggler bg-danger-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon text-light"></span>
@@ -87,7 +87,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" href="{% url 'route' %}">Создание маршрута</a>
+                        <a class="nav-link active text-light" href="{% url 'route_menu' %}">Создание маршрута</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active text-light" href="{% url 'info' %}">Информация о павильонах</a>
