Fix forms and result of create_route page

--- a/first/templates/route_menu.html
+++ b/first/templates/route_menu.html
@@ -5,7 +5,7 @@
             <div class="col">
                 <div class="card border-danger">
                     <div class="card-header border-danger-subtle bg-danger-subtle">
-                        <b class="text-danger-emphasis">Меню</b>
+                        <b class="text-danger-emphasis">Меню маршрутов</b>
                     </div>
                     <div class="card-body">
 
