--- a/first/templates/create_route.html
+++ b/first/templates/create_route.html
@@ -46,7 +46,7 @@
                         {% if request.method == "POST" %}
                         <div class="mb-3 row">
                             <div class="col">
-                                <p>Время прохождения маршрута: {{ dist }}</p>
+                                <p>{{ dist }}</p>
                                 <center>
                                     <ul class="list-group list-group-flush">
                                         {% for i in way_arr %}
