Add Time_route an Interest_route pages and forms

--- a/first/templates/route_menu.html
+++ b/first/templates/route_menu.html
@@ -11,17 +11,17 @@
 
                         <div class="mb-3 row mt-3">
                             <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'gen_route' %}">Выбор начального и конечного павильона</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'points_route' %}">Выбор начального и конечного павильона</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
                             <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="#">Выбор готового маршрута</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'interest_route' %}">Выбор маршрута по теме</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
                             <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="#">Создание маршрута по времени </a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'time_route' %}">Создание маршрута по времени</a>
                             </div></center>
                         </div>
                     </div>
