--- a/first/templates/time_route.html
+++ b/first/templates/time_route.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="mb-3 row">
                             <div class="col">
-                                <form action="{% url 'gen_route' %}" method="post">
+                                <form action="{% url 'time_route' %}" method="post">
                                     {% csrf_token %}
 
                                     {% if errors %}
