--- a/first/templates/points_route.html
+++ b/first/templates/points_route.html
@@ -4,7 +4,7 @@
     <center>
         <div class="row mt-5">
             <center>
-                <div class="col">
+                <div class="col-5">
                     <div class="card border-danger">
                         <div class="row mt-5">
                             <div class="col">
