--- a/first/templates/route_menu.html
+++ b/first/templates/route_menu.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="mb-3 row">
                             <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'static_route' %}">Выбор маршрута от авторов</a>
+                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'static_route' %}">Выбор маршрута из предложенных</a>
                             </div></center>
                         </div>
                         <div class="mb-3 row">
