bugfix time_route

--- a/first/templates/static_route.html
+++ b/first/templates/static_route.html
@@ -28,7 +28,7 @@
                             </div>
                             <div class="col">
                                 <table class="table table-striped">
-                                    <tr><td><b>Народы_ссср</b></td></tr>
+                                    <tr><td><b>Народы СССР</b></td></tr>
                                     {% for point in way2 %}
                                     <tr>
                                         <td>{{ point }}</td>
