--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -13,9 +13,15 @@
           crossorigin="anonymous">
     <meta name="theme-color" content="#712cf9">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+
     <style>
           body{
+            font-family: 'Fira Sans', sans-serif;
             background-image: url(https://sun9-52.userapi.com/impg/roRbczAi68jDa1jq5wGbjr8Z4qbuM1VZescXFw/c0njeWwcX0Q.jpg?size=2560x1440&quality=96&sign=c15e05d92faa3e028b5a977d71b5a556&type=album)
+
           }
           .bd-placeholder-img {
             font-size: 1.125rem;
