--- a/first/templates/route_menu.html
+++ b/first/templates/route_menu.html
@@ -1,33 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
-        <center><div class="row mt-5">
-            <div class="col">
-                <div class="card border-danger">
-                    <div class="card-header border-danger-subtle bg-danger-subtle">
-                        <b class="text-danger-emphasis">Меню маршрутов</b>
-                    </div>
-                    <div class="card-body">
-
-                        <div class="mb-3 row mt-3">
-                            <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'points_route' %}">Выбор начального и конечного павильона</a>
-                            </div></center>
+<div class="container">
+    <center>
+        <div class="row mt-5">
+            <center>
+                <div class="col-5">
+                    <div class="card border-danger">
+                        <div class="row mt-5">
+                            <div class="col">
+                                <img src="https://sun9-70.userapi.com/impg/OgJp2vdmQjbzn6KjnpR7ZkNpbBKjoZ8qhB_PTw/_K7d9t64Jec.jpg?size=1240x1690&quality=96&sign=1f1ebe51b05c13257df37414eec9f974&type=album"
+                                     class="card-img-top border-danger-subtle bg-danger-subtle" alt="">
+                            </div>
                         </div>
-                        <div class="mb-3 row">
-                            <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'static_route' %}">Предлагаемые маршруты</a>
-                            </div></center>
-                        </div>
-                        <div class="mb-3 row">
-                            <center><div class="col">
-                                <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle" href="{% url 'time_route' %}">Создание маршрута по времени</a>
-                            </div></center>
+                        <div class="card-body">
+                            <h5 class="card-title"><b class="text-danger-emphasis">Создание маршрутов</b></h5>
+                            <div class="row mt-5">
+                                <div class="col">
+                                    <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle"
+                                       href="{% url 'points_route' %}">Выбор начального и конечного павильона</a>
+                                </div>
+                                <div class="col">
+                                    <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle"
+                                       href="{% url 'static_route' %}">Предлагаемые маршруты</a>
+                                </div>
+                                <div class="col">
+                                    <a class="btn text-danger-emphasis bg-danger-subtle border-danger-subtle"
+                                       href="{% url 'time_route' %}">Создание маршрута по времени</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </center>
         </div>
-        </center>
-    </div>
+    </center>
+</div>
+
 {% endblock %}
