--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -74,6 +74,8 @@
             -webkit-overflow-scrolling: touch;
             }
     </style>
+    {% block extra_css %}
+    {% endblock %}
 
     <link href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/sticky-footer-navbar.css"
           rel="stylesheet">
